# Nablla

./: .gitignore  ArrayStructure.drawio  CMakeLists.txt  LICENSE  README.md
examples/: README.md
examples/1-1-1-point_position_to_segment/: CMakeLists.txt  main.cpp  report.rst  run.py
examples/pytools/: runtool.py
include/: type_define.hpp
include/algebra/array/: array_list.hpp  multi_array.hpp
include/algebra/blas/: blas_0.hpp  blas_1.hpp
include/algebra/io/: mmio.hpp
include/algebra/matrix/: matrix_scr.hpp
include/algebra/solver/: jacobi.hpp  solver_define.hpp
include/domain/: domain_define.hpp
include/domain/boundary/: bc_value.hpp  boundary_condition.hpp  boundary_index.hpp
include/domain/operation/: laplacian.hpp
include/domain/structure/: index.hpp  structure.hpp  structure_define.hpp
include/domain/structure/field/: sfield.hpp  svector_center.hpp  svector_face.hpp
include/domain/structure/ghost/: linear_cut.hpp  mask.hpp  regular.hpp  regular_subdivision.hpp  sghost.hpp
include/domain/structure/grid/: nonuniform.hpp  sgrid.hpp  uniform.hpp
include/domain/structure/operation/: slaplacian.hpp  slaplacian_cut.hpp  soperation.hpp  soperation_define.hpp  svalue.hpp
include/domain/structure/order/: sorder.hpp  xyz.hpp
include/geometry/: geometry.hpp
include/geometry/objects/analytic/: line.hpp
include/geometry/objects/basic/: box.hpp  segment.hpp
include/geometry/objects/bbtree/: aabbox.hpp
include/geometry/operation/boolean/: line_box.hpp  segment_segment.hpp
include/io/: gnuplot.hpp  io_define.hpp
include/utility/: clock.hpp
test/: CMakeLists.txt  test_gtest.cpp
test/algebra/: CMakeLists.txt  test_array_list.cpp  test_linear_polynomial.cpp  test_matrix_sparse.cpp  test_multi_array.cpp
test/geometry/: CMakeLists.txt  test_bezier.cpp  test_box.cpp  test_point.cpp  test_segment.cpp
test/io/: CMakeLists.txt  test_csv.cpp
test/structure/: CMakeLists.txt  test_sgrid.cpp
test/substance/: CMakeLists.txt  test_atmosphere.cpp
test/utility/: CMakeLists.txt  test_any.cpp  test_clock.cpp
